--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "android": "npm run build && npx cap sync && npx cap open android",
     "ios": "npm install && npm run build && npx cap copy && npx cap sync && npx cap open ios",
-    "sunmi:build": "npm run build && npx cap sync android && cd android && ./gradlew assembleRelease",
+    "sunmi:bump": "node scripts/sunmi-build.mjs --bump --dry-run",
+    "sunmi:build": "node scripts/sunmi-build.mjs",
+    "sunmi:build:bump": "node scripts/sunmi-build.mjs --bump",
     "sunmi:apk": "echo 'APK at:' && ls -la android/app/build/outputs/apk/release/app-release.apk"
   },
   "dependencies": {
